--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">You personal travel guide</h2>
-    <h4 class="header--sub-header">Excursion remembers places you like, recommends new points of interest around 
-    you.</h4>
+    <h4 class="header--sub-header">Excursion remembers places you like, recommends new 
+    points of interest around you.</h4>
+    <p><img src="resources/images/Screenshot (63).png"></p>
+    <p><img src="resources/images/Screenshot (64).png"></p>
+    <h4 class="header--sub-header">Coming Soon for iPhone and Android</h4>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
